# faitout

./: Cargo.toml  README.md  build.rs  notes.json  settings.json
assets/: README.txt
src/: main.rs
src/editor/: editor.rs
src/notes/: notes.rs
src/settings/: settings.rs
